objects/Apttus_Config2__RelatedPriceListItem__c.object
<CustomObject>
    <description>Holds the relationships between price list items</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the price list item</description>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Related Price List Items (To)</relationshipLabel>
        <relationshipName>RelatedPriceListItemsTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedAdjustmentAmount__c</fullName>
        <description>The related item price adjustment amount.</description>
        <inlineHelpText>The related item price adjustment amount.</inlineHelpText>
        <label>Related Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedAdjustmentType__c</fullName>
        <description>The related item price adjustment type</description>
        <inlineHelpText>The related item price adjustment type</inlineHelpText>
        <label>Related Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedChargeType__c</fullName>
        <description>The related charge type</description>
        <inlineHelpText>The related charge type</inlineHelpText>
        <label>Related Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedCustomGroupFieldId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related custom group field. Only applicable for related custom groups.</description>
        <inlineHelpText>ID of the related custom group field. Only applicable for related custom groups.</inlineHelpText>
        <label>Related Custom Group Field</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__FormulaField__c.Apttus_Config2__BusinessObject__c</field>
                <operation>equals</operation>
                <value>Apttus_Config2__LineItem__c</value>
            </filterItems>
            <infoMessage>Please select a custom group field</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__FormulaField__c</referenceTo>
        <relationshipLabel>Related Price List Items</relationshipLabel>
        <relationshipName>RelatedPriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedCustomGroup__c</fullName>
        <description>The related custom group. The custom group source is required.</description>
        <inlineHelpText>The related custom group. The custom group source is required.</inlineHelpText>
        <label>Related Custom Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedPriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related price list item</description>
        <label>Related Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Related Price List Items (From)</relationshipLabel>
        <relationshipName>RelatedPriceListItemsFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedProductFamily__c</fullName>
        <description>The related product family</description>
        <inlineHelpText>The related product family</inlineHelpText>
        <label>Related Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related product group</description>
        <inlineHelpText>ID of the related product group</inlineHelpText>
        <label>Related Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Related Price List Items</relationshipLabel>
        <relationshipName>RelatedPriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related product</description>
        <inlineHelpText>ID of the related product</inlineHelpText>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Price List Items</relationshipLabel>
        <relationshipName>RelatedPriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationType__c</fullName>
        <description>The relation type</description>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Related Price</fullName>
                    <default>true</default>
                    <label>Related Price</label>
                </value>
                <value>
                    <fullName>Related Quantity</fullName>
                </value>
                <value>
                    <fullName>Related Attribute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Price List Item</label>
    <nameField>
        <displayFormat>RI-{0000000000}</displayFormat>
        <label>Related Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Price List Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>